--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "emanuel-test": {
+    "grayscale-angular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/emanuel-test",
+            "outputPath": "dist/grayscale-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -72,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "emanuel-test:build"
+            "browserTarget": "grayscale-angular:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "emanuel-test:build:production"
+              "browserTarget": "grayscale-angular:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "emanuel-test:build"
+            "browserTarget": "grayscale-angular:build"
           }
         },
         "test": {
@@ -128,15 +128,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "emanuel-test:serve"
+            "devServerTarget": "grayscale-angular:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "emanuel-test:serve:production"
+              "devServerTarget": "grayscale-angular:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "emanuel-test"
+    }
+  },
+  "defaultProject": "grayscale-angular"
 }
